# compilerDesign_V3

./: .gitignore  BUILD.md  CMakeLists.txt  Derivation  TODO  driver.cpp  example1.ast.outast  first_and_follow.cpp  first_and_follow.h  followSet  handler.h  lexor.cpp  lexor.h  output.txt  parser.cpp  parser.h
assignments/: assignment1.outlexerrors  assignment1.outlextokens
assignments/assignment1.COMP442-6421.paquet.2025.4/: lexnegativegrading.alternative2.outlexerrors  lexnegativegrading.src  lexpositivegrading.outlextokens  lexpositivegrading.src
inputs/: AttributeGrammar.txt  Node-retention  a_good_grammar_grammar.grm  a_good_grammar_grammar.outlexerrors  a_good_grammar_grammar.outlextokens  bubblesort.outlexerrors  bubblesort.outlextokens  bubblesort.src  example-bubblesort.outlextokens  example-bubblesort.src  example-polynomial.outlextokens  example-polynomial.src  example-simplemain.src  filenames  lexpositivegrading.outlexerrors  lexpositivegrading.outlextokens  lexpositivegrading.src
outputs/: AbstractSyntaxTreeViz.ast.outast  Derivation  SYMBOLTABLEOUTPUT.txt  example-bubblesort.outlexerrors  example-bubblesort.outlextokens  example-polynomial.outlextokens  example-simplemain.outlextokens  firstSet  followSet  output.txt  symbolTable.txt
src/: CMakeLists.txt  Derivation  driver.cpp  first_and_follow.cpp  first_and_follow.h  handler.cpp  handler.h  lexdriver  lexor.cpp  lexor.h  node.cpp  node.h  parser.cpp  parser.h  parsing_table.cpp  parsing_table.h  table_entry.h  visitor.cpp  visitor.h
(+27 files in other folders)
